--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -16,7 +16,7 @@
   <ul class="list-unstyled">
     <li class="my-1"><a href="https://www.facebook.com/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i> ECSS Facebook Page</a></li>
     <li class="my-1"><a href="https://www.facebook.com/groups/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook group" aria-hidden="true"></i> ECSS Facebook Group</a></li>
-    <li class="my-1"><a href="mailto:society@ecs.soton.ac.uk" class="icon-link"><i class="fas fa-envelope-square" title="ECSS Facebook group" aria-hidden="true"></i> Email: society@ecs.soton.ac.uk</a></li>
+    <li class="my-1"><a href="mailto:society@ecs.soton.ac.uk" class="icon-link"><i class="fas fa-envelope-square" title="Email" aria-hidden="true"></i> society@ecs.soton.ac.uk</a></li>
   </ul>
 </section>
 {% endblock %}
