--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="https://society.ecs.soton.ac.uk/committee/">Committee</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://society.ecs.soton.ac.uk/societies/">Societies</a>
+                <a class="nav-link" href="{% url 'website:societies-default' %}">Societies</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="https://society.ecs.soton.ac.uk/sponsors/">Sponsors</a>
