--- a/website/templates/website/societies.html
+++ b/website/templates/website/societies.html
@@ -62,6 +62,9 @@
           <a href="https://twitter.com/{{ society.twitter }}" class="icon-link" aria-label="Twitter"><i class="fab fa-twitter" title="Twitter" aria-hidden="true"></i> @{{ society.twitter }}</a>
         </li>
         {% endif %}
+        {% for link in society.societylinks_set.all %}
+        <li><a href="{{ link.url }}">{{ link.name }}</a></li>
+        {% endfor %}
       </ul>
     </div>
   </div>
