Create sponsors models

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="{% url 'website:societies-default' %}">Societies</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="https://society.ecs.soton.ac.uk/sponsors/">Sponsors</a>
+                  <a class="nav-link" href="{% url 'website:sponsors' %}">Sponsors</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarEventsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -117,10 +117,10 @@
         <div>
           <dl class="footer-list">
             <dt></dt>
-            <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/about/" class="footer-link">About</a></dd>
+            <dd class="footer-item"><a href="{% url 'website:about' %}" class="footer-link">About</a></dd>
             <dd class="footer-item"><a href="{% url 'website:contact' %}" class="footer-link">Contact</a></dd>
             <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/filestore/index.php/s/FGMWH0tjcjnHRpe" class="footer-link">Meeting Minutes</a></dd>
-            <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/societies/" class="footer-link">Societies in ECS</a></dd>
+            <dd class="footer-item"><a href="{% url 'website:societies-default' %}" class="footer-link">Societies in ECS</a></dd>
             <dd class="footer-item"><a href="https://www.ecs.soton.ac.uk" class="footer-link">ECS</a></dd>
           </dl>
           <dl class="footer-list">
