--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -41,7 +41,9 @@
         <div class="sponsor-logo-text-container-jumpstart2018">
           <div class="text-center">Proud Sponsor</div>
           <div class="sponsor-logo-container-jumpstart2018">
-            <img class="img-fluid" src="{% static 'website/content/events/jumpstart-2018/ibm-logo.jpg' %}" alt="IBM">
+            <a href="https://www.ibm.com/">
+              <img class="img-fluid" src="{% static 'website/content/events/jumpstart-2018/ibm-logo.jpg' %}" alt="IBM">
+            </a>
           </div>
         </div>
       </div>
