--- a/website/templates/website/sponsors/sponsors.html
+++ b/website/templates/website/sponsors/sponsors.html
@@ -9,14 +9,50 @@
   <section>
     <h3>Gold Sponsors</h3>
     <hr>
+    <ul class="list-unstyled d-flex justify-content-around flex-wrap">
+      {% for sponsor in gold_sponsors %}
+      <li>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
+        </a>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <div>{{ sponsor.name }}</div>
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
   </section>
   <section>
     <h3>Silver Sponsors</h3>
     <hr>
+    <div>
+      {% for sponsor in silver_sponsors %}
+      <div>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
+        </a>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <div>{{ sponsor.name }}</div>
+        </a>
+      </div>
+      {% endfor %}
+    </div>
   </section>
   <section>
     <h3>Bronze Sponsors</h3>
     <hr>
+    <div>
+      {% for sponsor in bronze_sponsors %}
+      <div>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
+        </a>
+        <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}">
+          <div>{{ sponsor.name }}</div>
+        </a>
+      </div>
+      {% endfor %}
+    </div>
   </section>
   <div>
     <p>
