--- a/feedback/templates/feedback/submit.html
+++ b/feedback/templates/feedback/submit.html
@@ -19,7 +19,7 @@ Submit Feedback - ECSS
   <p>
     All source code is available on the <a href="https://github.com/ecss-soton/ecssweb">GitHub repository</a>. If you have any suggestions of how to improve this page or the site in general please submit them here as well!
   </p>
-  <form method="POST">
+  <form method="post">
     {% csrf_token %}
     {% for field in submit_form %}
     <div class="form-group">
