--- a/ecsswebauth/templates/ecsswebauth/auth.html
+++ b/ecsswebauth/templates/ecsswebauth/auth.html
@@ -6,7 +6,7 @@
 <div class="container mt-3">
   {% if not user.is_authenticated %}
   <p class="alert alert-info">You are not logged in.</p>
-  <form action="{% url 'ecsswebauth:saml-login'%}" method="POST">
+  <form action="{% url 'ecsswebauth:saml-login'%}" method="post">
     {{ saml_request_form }}
     <input type="submit" value="Login with university account" class="btn btn-ecssweb">
   </form>
@@ -18,7 +18,7 @@
       window.location.replace("{{ next_url }}");
     </script>
     {% endif %}
-  <form action="{% url 'ecsswebauth:saml-logout' %}" method="GET">
+  <form action="{% url 'ecsswebauth:saml-logout' %}" method="get">
     <input type="submit" value="Logout" class="btn btn-ecssweb">
   </form>
   {% endif %}
