--- a/website/templates/website/sponsors/sponsors.html
+++ b/website/templates/website/sponsors/sponsors.html
@@ -6,7 +6,7 @@
 
 {% block pagestyle %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'website/styles/sponsors/sponsors.css' %}">
+<link rel="stylesheet" href="{% static 'website/styles/sponsors.css' %}">
 {% endblock %}
 
 {% block content %}
