Style sponsors detail page

--- a/website/static/website/styles/sponsors/sponsors-overall.css
+++ b/website/static/website/styles/sponsors/sponsors-overall.css
@@ -33,9 +33,8 @@
 }
 
 
-/*
-Medals
-*/
+/* Medals */
+
 .medal {
   background-image: url(/static/website/images/sponsors-medals.png);
   background-repeat: no-repeat;
