--- a/website/templates/website/societies.html
+++ b/website/templates/website/societies.html
@@ -22,7 +22,7 @@
   </ul>
   <div class="row mt-2">
     <div class="col-lg-3 my-2">
-      <img class="img-fluid mx-auto d-block logo-societies" src="{% static society.logo_file %}" alt="{{ society.name }}">
+      <img class="img-fluid mx-auto d-block societies-logo" src="{% static society.logo_file %}" alt="{{ society.name }}">
     </div>
     <div class="col-lg-9">
       <h2>{{ society.name }}</h2>
