Show tabs on Jumpstart calendars

--- a/website/templates/website/events/jumpstart-2018.html
+++ b/website/templates/website/events/jumpstart-2018.html
@@ -70,7 +70,7 @@
           </div>
           <div id="ugSchedule" class="collapse show" aria-labelledby="ugScheduleHeading">
             <div class="card-body calendar-container">
-              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a8a6&amp;src=fsntjlpn55svbf7u4rphn354bc%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23A32929&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
+              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a8a6&amp;src=fsntjlpn55svbf7u4rphn354bc%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23A32929&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
           </div>
           <div id="pgSchedule" class="collapse show" aria-labelledby="pgScheduleHeading">
             <div class="card-body calendar-container">
-              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a77b&amp;src=tdibdfq86v9p2vfedjj7r7fqq0%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23BE6D00&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
+              <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=500&amp;wkst=1&amp;bgcolor=%23f2a77b&amp;src=tdibdfq86v9p2vfedjj7r7fqq0%40group.calendar.google.com&amp;dates=20180923%2F20180929&amp;color=%23BE6D00&amp;ctz=Europe%2FLondon" height="500" class="calendar w-100"></iframe>
             </div>
           </div>
         </div>
