--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://society.ecs.soton.ac.uk/committee/">Committee</a>
+                <a class="nav-link" href="{% url 'website:committee-overview' %}">Committee</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'website:societies-default' %}">Societies</a>
