--- a/website/templates/website/sponsors/sponsors.html
+++ b/website/templates/website/sponsors/sponsors.html
@@ -16,7 +16,7 @@
     <hr>
     <ul class="list-unstyled d-flex justify-content-around flex-wrap">
       {% for sponsor in gold_sponsors %}
-      <li class="sponsor-item">
+      <li class="text-center sponsor-item">
         <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}" class="sponsor-img-link" title="{{ sponsor.name }}">
           <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
         </a>
@@ -29,7 +29,7 @@
     <hr>
     <ul class="list-unstyled d-flex justify-content-around flex-wrap">
       {% for sponsor in silver_sponsors %}
-      <li class="sponsor-item">
+      <li class="text-center sponsor-item">
         <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}" class="sponsor-img-link" title="{{ sponsor.name }}">
           <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
         </a>
@@ -42,7 +42,7 @@
     <hr>
     <ul class="list-unstyled d-flex justify-content-around flex-wrap">
       {% for sponsor in bronze_sponsors %}
-      <li class="sponsor-item">
+      <li class="text-center sponsor-item">
         <a href="{% url 'website:sponsors' %}?sponsor={{ sponsor.codename }}" class="sponsor-img-link" title="{{ sponsor.name }}">
           <img src="{% static sponsor.logo_file %}" alt="{{ sponsor.name }}">
         </a>
