--- a/website/templates/website/committee/committee-member.html
+++ b/website/templates/website/committee/committee-member.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 <div class="container mt-3">
+  <div class="mb-3"><a href="{% url 'website:committee-overview' %}"><i class="fas fa-arrow-circle-left"></i> committee overview</a></div>
   <ul class="nav nav-tabs">
     {% for committee_member in committee %}
     <li class="nav-item">
