--- a/website/static/website/styles/home.css
+++ b/website/static/website/styles/home.css
@@ -18,13 +18,7 @@
   height: auto;
 }
 
-.sponsors-logos-home {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.sponsor-link-logo-home {
+.sponsor-list-logo-home {
   width: 18rem;
   height: 6rem;
   margin: 5rem;
@@ -34,7 +28,7 @@
 }
 
 @media (max-width: 991.98px) {
-  .sponsor-link-logo-home {
+  .sponsor-list-logo-home {
     width: 15rem;
     height: 5rem;
     margin: 3rem;
@@ -42,7 +36,7 @@
 }
 
 @media (max-width: 767.98px) {
-  .sponsor-link-logo-home {
+  .sponsor-list-logo-home {
     width: 9rem;
     height: 3rem;
     margin: 1rem;
@@ -50,7 +44,7 @@
 }
 
 @media (max-width: 575.98px) {
-  .sponsor-link-logo-home {
+  .sponsor-list-logo-home {
     width: 8.1rem;
     height: 2.7rem;
     margin: 1rem;
