Change html attribute

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -24,7 +24,7 @@
               </form>
             </div>
             <div class="col-3 text-right">
-              <button class="navbar-toggler portal-nav-toggler" type="button" data-toggle="collapse" data-target=".portalNavContent" aria-controls="portalNavContent" aria-expanded="false" aria-label="Toggle portal navigation">
+              <button class="navbar-toggler portal-nav-toggler" type="button" data-toggle="collapse" data-target=".portalNavContent" aria-expanded="false" aria-label="Toggle portal navigation">
                 <span class="navbar-toggler-icon">
                   <i class="fas fa-bars"></i>
                 </span>
