Change texts around

--- a/feedback/templates/feedback/submit.html
+++ b/feedback/templates/feedback/submit.html
@@ -17,7 +17,7 @@ Submit Feedback - ECSS
     The committee will reply to submitted feedback, and both the feedback and response will be visible.
   </p>
   <p>
-    All source code is available on the <a href="https://github.com/ecss-soton/ecssweb">GitHub repository</a>. If you have any suggestions of how to improve this page or the site in general please submit them here as well!
+    The source code for the website is available on the <a href="https://github.com/ecss-soton/ecssweb">GitHub repository</a>. If you have any suggestions of how to improve this page or the site in general please submit them here as well!
   </p>
   <form method="post">
     {% csrf_token %}
