--- a/portal/templates/portal/overview.html
+++ b/portal/templates/portal/overview.html
@@ -4,7 +4,7 @@
 <section>
   <h1>Overview</h1>
   <p>Welcome to ECSS web portal!</p>
-  <p>You can find current ECSS <a href="#">voting</a>, <a href="#">merchandise orders and events tickets bookings</a> in this web portal.</p>
-  <p>You are also welcomed to <a href="#">leave an anonymous feedback</a> about what we do well, and what we could do better on.</p>
+  <!-- <p>You can find current ECSS <a href="#">voting</a>, <a href="#">merchandise orders and events tickets bookings</a> in this web portal.</p>
+  <p>You are also welcomed to <a href="#">leave an anonymous feedback</a> about what we do well, and what we could do better on.</p> -->
 </section>
 {% endblock %}
