--- a/ecsswebauth/templates/ecsswebauth/auth.html
+++ b/ecsswebauth/templates/ecsswebauth/auth.html
@@ -10,6 +10,11 @@
     {{ saml_request_form }}
     <input type="submit" value="Login with university account" class="btn btn-ecssweb">
   </form>
+  <p class="mt-2 text-muted">
+    <small>
+      By login with your University of Southampton account, your <b>username, name, university email address, information about your department and whether you are a students or member of staff</b> will be sent to ECSS. These information will be stored on ECSS's servers for up to two days, if you actively logout by using the logout button, your information will be removed from ECSS's servers immediately (unless you have been assigned additional privileges to access resources on the server and it is necessary to store your information for longer, e.g. if you are a committee member or you need to have access to additional resources for events). Necessary session cookies for security and storing you login status will be set, and they will be removed when you close your browser.
+    </small>
+  </p>
   {% else %}
   <p class="alert alert-info">You are logged in as <strong>{{ user.username }}</strong>.</p>
     {% if next_url != auth_url %}
