--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -44,22 +44,23 @@ section {
 
 
 /* Themes */
-.navbar-ecssweb .navbar-nav .nav-link {
+.navbar-ecssweb .navbar-nav .nav-link, .navbar-ecssweb .nav-link {
   padding: .5rem .5rem;
   color: white;
 }
 
-.navbar-ecssweb .navbar-nav .nav-link:hover {
+.navbar-ecssweb .navbar-nav .nav-link:hover, .navbar-ecssweb .nav-link:hover {
   color: white;
 }
 
-.navbar-ecssweb .navbar-nav .nav-link:focus {
+.navbar-ecssweb .navbar-nav .nav-link:focus, .navbar-ecssweb .nav-link:focus {
   color: white;
 }
 
 .navbar-ecssweb .nav-item:hover {
   background-color: #d82129;
-  border-radius: .2rem
+  border-radius: .2rem;
+  display: block;
 }
 
 .btn-ecssweb {
