--- a/jumpstart/templates/jumpstart/home-base.html
+++ b/jumpstart/templates/jumpstart/home-base.html
@@ -1,11 +1,13 @@
 {% extends 'portal/base.html' %}
 
 {% block title %}
-Jumpstart 2018 - ECSS
+Jumpstart - ECSS
 {% endblock %}
 
 {% block portalcontent %}
 <div>
-  <h1>Jumpstart 2018</h1>
+  <h1>Jumpstart</h1>
+  {% block jumpstartcontent %}
+  {% endblock %}
 </div>
 {% endblock %}
