Jumpstart helper page

--- a/jumpstart/templates/jumpstart/fresher.html
+++ b/jumpstart/templates/jumpstart/fresher.html
@@ -28,4 +28,13 @@
     <img src="{{ fresher.group.helper.photo }}" alt="{{ fresher.group.helper.name }}">
   </div>
 </div>
+<div class="card mt-3">
+  <div class="card-header">
+      City Challenge
+    </div>
+    <div class="card-body">
+      
+    </div>
+  </div>
+</div>
 {% endblock %}
