Add jumpstart committee page

--- a/jumpstart/templates/jumpstart/fresher.html
+++ b/jumpstart/templates/jumpstart/fresher.html
@@ -25,7 +25,7 @@
   </div>
   <div class="card-body">
     <p class="card-text">Your group helper is {{ fresher.group.helper.name }}{% if fresher.group.helper.nickname %} ({{ fresher.group.helper.nickname }}){% endif %}.</p>
-    <img class="img-fluid" src="{{ fresher.group.helper.photo.url }}" alt="{{ fresher.group.helper.name }}">
+    <img class="img-fluid helper-photo" src="{{ fresher.group.helper.photo.url }}" alt="{{ fresher.group.helper.name }}">
   </div>
 </div>
 <div class="card mt-3">
