--- a/jumpstart/templates/jumpstart/home-base.html
+++ b/jumpstart/templates/jumpstart/home-base.html
@@ -1,5 +1,12 @@
 {% extends 'portal/base.html' %}
 
+{% load static %}
+
+{% block pagestyle %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'jumpstart/jumpstart.css' %}">
+{% endblock %}
+
 {% block title %}
 Jumpstart - ECSS
 {% endblock %}
