--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -33,7 +33,7 @@
   </div>
   <div class="card-body">
     <p class="card-text">
-      <img class="img-fluid" src="{{ helper.photo.url }}" alt="{{ helper.name }}">
+      <img class="img-fluid helper-photo" src="{{ helper.photo.url }}" alt="{{ helper.name }}">
       <ul>
         <li>Name: {{ helper.name }}</li>
         <li>Nickname: {% if helper.nickname %}{{ helper.nickname }}{% else %}<span class="text-muted">Not set</span>{% endif %}</li>
