Update portal nav

--- a/jumpstart/templates/jumpstart/committee.html
+++ b/jumpstart/templates/jumpstart/committee.html
@@ -1,4 +1,4 @@
-{% extends 'jumpstart/home-base.html' %}
+{% extends 'jumpstart/base.html' %}
 
 {% block jumpstartcontent %}
 {% for group in groups %}
