--- a/jumpstart/templates/jumpstart/fresher.html
+++ b/jumpstart/templates/jumpstart/fresher.html
@@ -1,4 +1,4 @@
-{% extends 'jumpstart/home-base.html' %}
+{% extends 'jumpstart/base.html' %}
 
 {% block jumpstartcontent %}
 <p class="card-text">Hi {{ fresher.name }}, welcome to Jumpstart!</p>
