--- a/jumpstart/templates/jumpstart/helper-profile-edit.html
+++ b/jumpstart/templates/jumpstart/helper-profile-edit.html
@@ -1,4 +1,4 @@
-{% extends 'jumpstart/home-base.html' %}
+{% extends 'jumpstart/base.html' %}
 
 {% block jumpstartcontent %}
 <div class="card mt-3">
