--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -1,4 +1,4 @@
-{% extends 'jumpstart/home-base.html' %}
+{% extends 'jumpstart/base.html' %}
 
 {% block jumpstartcontent %}
 {% for message in messages %}
