--- a/jumpstart/templates/jumpstart/helper-profile-edit.html
+++ b/jumpstart/templates/jumpstart/helper-profile-edit.html
@@ -20,6 +20,9 @@
         {% endfor %}
         <input type="Submit" class="btn btn-ecssweb" value="Update">
         <p>
+          <small class="text-muted">When updating your photo, the old file will not be immediately removed from the server. It need to be removed manually by us.</small>
+        </p>
+        <p>
           <small class="text-muted">Your profile is visible to ECSS committee and your group members.</small>
         </p>
       </form>
