--- a/jumpstart/templates/jumpstart/helper.html
+++ b/jumpstart/templates/jumpstart/helper.html
@@ -5,6 +5,9 @@
 {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
 <div class="alert alert-success">{{ message }}</div>
 {% endif %}
+{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+<div class="alert alert-warning">{{ message }}</div>
+{% endif %}
 {% endfor %}
 <p class="card-text">Hi {% if helper.nickname %}{{ helper.nickname }}{% else %}{{ helper.name }}{% endif %}, welcome to Jumpstart!</p>
 <div class="card">
